--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -21,20 +21,17 @@
 
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/registerfrag_button_register"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="288dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/register_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password2"
-        app:layout_constraintVertical_bias="0.542" />
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_password2" />
 
     <TextView
         android:id="@+id/textView2"
@@ -47,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/registerfrag_edittext_firstname"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -62,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/registerfrag_edittext_password1"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -74,11 +71,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_nickname" />
 
 
     <EditText
-        android:id="@+id/password2"
+        android:id="@+id/registerfrag_edittext_password2"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -90,10 +87,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_password1" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/registerfrag_edittext_lastname"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -105,10 +102,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_firstname" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/registerfrag_edittext_email"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -120,10 +117,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_lastname" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/registerfrag_edittext_nickname"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -135,5 +132,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_email" />
 </android.support.constraint.ConstraintLayout>
