fixed logged out(atm its settings)

--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context=".registerLoging.LandingFragment">
+    android:layout_height="match_parent" tools:context=".chatApp.LandingFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
