--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -19,6 +19,10 @@
         android:id="@+id/nav_settings"
         android:icon="@drawable/ic_menu_camera"
         android:title="Settings" />
+    <item
+        android:id="@+id/nav_logout"
+        android:icon="@drawable/ic_menu_camera"
+        android:title="Logout" />
 
 
 </menu>
