--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -5,23 +5,22 @@
 
     <item
         android:id="@+id/nav_chat"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/ic_menu_chat"
         android:title="Chats" />
     <item
         android:id="@+id/nav_contacts"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/ic_menu_contacts"
         android:title="Contacts" />
     <item
         android:id="@+id/nav_profile"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/ic_menu_profile"
         android:title="Profile" />
     <item
         android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/ic_menu_settings"
         android:title="Settings" />
     <item
         android:id="@+id/nav_logout"
-        android:icon="@drawable/ic_menu_camera"
         android:title="Logout" />
 
 
