--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/contactFragHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -26,6 +26,7 @@
         app:layout_constraintVertical_bias="0.048" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/contactsRecyclerView"
         android:layout_width="368dp"
         android:layout_height="409dp"
         tools:layout_editor_absoluteX="8dp"
