--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -9,27 +9,25 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+
     <TextView
-        android:id="@+id/contactFragHeader"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/contacts_textview_fragheader"
-        android:textSize="36sp"
+        android:text="TextView" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ChatContactRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048" />
+        app:layout_constraintTop_toTopOf="parent" >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/contactsRecyclerView"
-        android:layout_width="368dp"
-        android:layout_height="409dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="94dp" />
-
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
