--- a/app/src/main/res/layout/activity_chat_contacts.xml
+++ b/app/src/main/res/layout/activity_chat_contacts.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     android:background="#f1f1f1"
     android:padding="12dp"
-
-    tools:context="com.stacktips.recyclerview.MainActivity">
+    tools:context="tcss450.uw.edu.group2project.chatApp.ContactsActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
