--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ep_base_url">tcss450.herokuapp.com</string>
+    <string name="ep_base_url">rabbitchat-backend.herokuapp.com</string>
     <string name="ep_login">login</string>
     <string name="ep_register">register</string>
-</resources>
+    <string name="ep_contacts">contacts</string>
+    <string name="ep_chats">chats</string>
+    <string name="ep_profile">profile</string>
+    <string name="ep_contacts_sent_requests">contacts/sent</string>
+    <string name="ep_contacts_pending_requests">contacts/pending</string>
+    <string name="ep_contacts_find_new">contacts/find</string>
+
+    </resources>
