ok chat activity now creates a db, creates a table for chat contacts, sends query to heroku to check for any updates to contacts table for this user, handles json response next is parsing out json response object and altering local db to reflect changes

--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -9,5 +9,6 @@
     <string name="ep_contacts_sent_requests">contacts/sent</string>
     <string name="ep_contacts_pending_requests">contacts/pending</string>
     <string name="ep_contacts_find_new">contacts/find</string>
+    <string name="ep_contacts_query_ny_memberid">member/all</string>
 
     </resources>
