--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,17 +9,17 @@
     </style>
 
     <!-- DIFFERENT THEME COLORS -->
-    <style name="AppTheme2">
+    <style name="AppTheme2" parent="AppTheme.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary2</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark2</item>
         <item name="colorAccent">@color/colorAccent2</item>
     </style>
-    <style name="AppTheme3" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme3" parent="AppTheme.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary3</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark3</item>
         <item name="colorAccent">@color/colorAccent3</item>
     </style>
-    <style name="AppTheme4" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme4" parent="AppTheme.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary4</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark4</item>
         <item name="colorAccent">@color/colorAccent4</item>
