--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,19 +24,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_text_view_welcome" />
 
-    <EditText android:id="@+id/login_edit_text_username" android:layout_width="0dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp" android:layout_marginTop="184dp"
+    <EditText
+        android:id="@+id/login_edit_text_username"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="184dp"
         android:hint="@string/login_register_edit_text_username"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+        android:text="fake"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_text_view_hint" />
 
-    <EditText android:id="@+id/login_edit_text_password" android:layout_width="0dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp" android:layout_marginTop="24dp"
+    <EditText
+        android:id="@+id/login_edit_text_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:hint="@string/login_register_edit_text_password"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+        android:text="password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_edit_text_username" />
 
     <Button android:id="@+id/login_button_register" android:layout_width="wrap_content"
