--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,7 +11,8 @@
     <include
         layout="@layout/app_bar_chat"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:title="Rabbit Chat"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
