--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,11 +16,17 @@
         app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView android:id="@+id/login_text_view_hint" android:layout_width="0dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="24dp"
-        android:text="@string/login_edit_text_hint" android:textAlignment="center"
-        android:textColor="@color/colorAccent" app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/login_text_view_hint"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/login_edit_text_hint"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_text_view_welcome" />
 
@@ -28,8 +34,8 @@
         android:id="@+id/login_edit_text_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="184dp"
         android:hint="@string/login_register_edit_text_username"
         android:text="fake"
@@ -37,19 +43,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_text_view_hint" />
-
-    <EditText
-        android:id="@+id/login_edit_text_password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:hint="@string/login_register_edit_text_password"
-        android:text="password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_username" />
 
     <Button android:id="@+id/login_button_register" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_marginBottom="8dp"
@@ -63,9 +56,13 @@
         android:text="@string/login_button_login" app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <CheckBox android:id="@+id/login_check_box_stay_logged_in" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp" android:text="@string/login_check_box_stay_logged_in"
+    <CheckBox
+        android:id="@+id/login_check_box_stay_logged_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/login_check_box_stay_logged_in"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_edit_text_password" />
 
@@ -80,4 +77,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_text_view_hint" />
+
+    <EditText
+        android:id="@+id/login_edit_text_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/login_register_edit_text_password"
+        android:inputType="textPassword"
+        android:text="password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_username" />
 </android.support.constraint.ConstraintLayout>
