--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,78 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/register"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/register"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".registerLoging.RegisterFragment">
 
-    <TextView android:id="@+id/textView" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="Welcome!"
-        android:textSize="24sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Welcome!"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <Button android:id="@+id/registerfrag_button_register"
-        style="@style/Widget.AppCompat.Button.Colored" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
+    <Button
+        android:id="@+id/registerfrag_button_register"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
         android:text="@string/login_register_button_register"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_password2" />
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView android:id="@+id/textView2" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_marginTop="8dp"
-        android:text="Please register" app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Please register"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <EditText android:id="@+id/registerfrag_edittext_firstname" android:layout_width="368dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="20dp" android:ems="10"
-        android:hint="@string/register_edit_text_first_name" android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
+    <EditText
+        android:id="@+id/registerfrag_edittext_firstname"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="@string/register_edit_text_first_name"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <EditText android:id="@+id/registerfrag_edittext_password1" android:layout_width="368dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:ems="10"
-        android:hint="@string/login_register_edit_text_password" android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_username" />
 
-
-    <EditText android:id="@+id/registerfrag_edittext_password2" android:layout_width="368dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:ems="10"
-        android:hint="@string/login_register_edit_text_password" android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_password1" />
-
-    <EditText android:id="@+id/registerfrag_edittext_lastname" android:layout_width="368dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:ems="10"
-        android:hint="@string/register_edit_text_last_name" android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
+    <EditText
+        android:id="@+id/registerfrag_edittext_lastname"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/register_edit_text_last_name"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_firstname" />
 
-    <EditText android:id="@+id/registerfrag_edittext_email" android:layout_width="368dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:ems="10"
-        android:hint="@string/register_edit_text_email" android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
+    <EditText
+        android:id="@+id/registerfrag_edittext_email"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/register_edit_text_email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_lastname" />
 
-    <EditText android:id="@+id/registerfrag_edittext_username" android:layout_width="368dp"
-        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp" android:layout_marginTop="8dp" android:ems="10"
-        android:hint="@string/login_register_edit_text_username" android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
+    <EditText
+        android:id="@+id/registerfrag_edittext_username"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/login_register_edit_text_username"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_email" />
+
+    <EditText
+        android:id="@+id/registerfrag_edittext_password2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/login_register_edit_text_password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_password1" />
+
+    <EditText
+        android:id="@+id/registerfrag_edittext_password1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/login_register_edit_text_password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerfrag_edittext_username" />
 </android.support.constraint.ConstraintLayout>
