here is a push with the contacts details frag on it, i think the onCreate method in that frag is not right but I will look at it a bit later

--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -13,6 +13,7 @@
     <string name="keys_fragment_profile">profileFragmentTag</string>
     <string name="keys_fragment_contacts">contactsFragmentTag</string>
     <string name="keys_fragment_settings">settingsFragmentTag</string>
+    <string name="keys_fragment_contact_details">contactDetailsFragmentTag</string>
 
     <string name="keys_json_username">username</string>
     <string name="keys_json_password">password</string>
