--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -23,7 +23,7 @@
     <string name="keys_json_message">message</string>
     <string name="keys_json_messages">messages</string>
     <string name="keys_json_success">success</string>
-    <string name="keys_json_chat_id">chatId</string>
+    <string name="keys_json_chat_id">chatid</string>
     <string name="keys_json_success_value_true">true</string>
     <string name="keys_json_success_value_false">false</string>
 
