create new chat fragment should be able to create, send recieve objects now

--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -33,4 +33,7 @@
     <string name="ep_get_message">getMessages</string>
     <string name="ep_get_recent_chat">getRecentChat</string>
     <string name="ep_chat">chat</string>
+    <string name="ep_create_new">createNew</string>
+
+
     </resources>
